--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Castaway Podcast Landing</title>
+  <title>Castaway</title>
   <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body class="page">
@@ -33,20 +33,20 @@
           <div class="hero__listen">
             <span class="hero__label">Listen on</span>
             <div class="hero__platforms">
-              <a class="hero__platform" href="#" aria-label="Listen on Spotify">
-                <img src="pictures/spotify.png" alt="">
+              <a class="hero__platform" href="#">
+                <img src="pictures/spotify.png" alt="Listen on Spotify">
               </a>
-              <a class="hero__platform" href="#" aria-label="Listen on Google Podcasts">
-                <img src="pictures/pod.png" alt="">
+              <a class="hero__platform" href="#">
+                <img src="pictures/pod.png" alt="Listen on Spotify">
               </a>
-              <a class="hero__platform" href="#" aria-label="Listen on Soundcloud">
-                <img src="pictures/soundc.png" alt="">
+              <a class="hero__platform" href="#">
+                <img src="pictures/soundc.png" alt="Listen on Soundcloud">
               </a>
-              <a class="hero__platform" href="#" aria-label="Listen on Apple Podcasts">
-                <img src="pictures/mic.png" alt="">
+              <a class="hero__platform" href="#">
+                <img src="pictures/mic.png" alt="Listen on Apple Podcasts">
               </a>
-              <a class="hero__platform" href="#" aria-label="Listen on RSS">
-                <img src="pictures/antenna.png" alt="">
+              <a class="hero__platform" href="#">
+                <img src="pictures/antenna.png" alt="Listen on RSS">
               </a>
             </div>
           </div>
@@ -61,7 +61,7 @@
         <div class="episodes__list">
           <article class="episode-card">
             <div class="episode-card__media">
-              <img src="pictures/gear.png" alt="Audio gear on a desk">
+              <img src="pictures/gear.png" alt="Audio gear">
             </div>
             <div class="episode-card__body">
               <span class="episode-card__tag">Gear</span>
@@ -74,7 +74,7 @@
 
           <article class="episode-card">
             <div class="episode-card__media">
-              <img src="pictures/epmic.png" alt="Microphone with warm lighting">
+              <img src="pictures/epmic.png" alt="Microphone">
             </div>
             <div class="episode-card__body">
               <span class="episode-card__tag">Tips &amp; tricks</span>
@@ -87,7 +87,7 @@
 
           <article class="episode-card">
             <div class="episode-card__media">
-              <img src="pictures/epman.png" alt="Podcast host speaking into microphone">
+              <img src="pictures/epman.png" alt="Podcast host speaking">
             </div>
             <div class="episode-card__body">
               <span class="episode-card__tag">Gear</span>
@@ -102,7 +102,7 @@
 
       <section class="section about">
         <div class="about__text">
-          <span class="about__badge" aria-hidden="true">→</span>
+          <span class="about__badge">→</span>
           <p class="about__eyebrow">Meet your host</p>
           <h2 class="about__title">Jacob Paulaner</h2>
           <p class="about__description">Jacob has a background in audio engineering, and has been podcasting since the early days.</p>
@@ -136,42 +136,42 @@
       <section class="section reviews">
         <div class="reviews__grid">
           <article class="review-card">
-            <div class="review-card__rating" aria-label="5 star rating">
+            <div class="review-card__rating">
               <span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span>
             </div>
             <p class="review-card__text">I can’t recommend this podcast enough</p>
             <p class="review-card__author">Betty Lacey</p>
           </article>
           <article class="review-card">
-            <div class="review-card__rating" aria-label="5 star rating">
+            <div class="review-card__rating">
               <span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span>
             </div>
             <p class="review-card__text">Jacob is the best in the business</p>
             <p class="review-card__author">Adam Driver</p>
           </article>
           <article class="review-card">
-            <div class="review-card__rating" aria-label="5 star rating">
+            <div class="review-card__rating">
               <span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span>
             </div>
             <p class="review-card__text">A wealth of audio knowledge</p>
             <p class="review-card__author">Marcus Brown</p>
           </article>
           <article class="review-card">
-            <div class="review-card__rating" aria-label="5 star rating">
+            <div class="review-card__rating" >
               <span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span>
             </div>
             <p class="review-card__text">Every episode is a gem!</p>
             <p class="review-card__author">Jessica Knowl</p>
           </article>
           <article class="review-card">
-            <div class="review-card__rating" aria-label="5 star rating">
+            <div class="review-card__rating">
               <span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span>
             </div>
             <p class="review-card__text">Whoa whoa, let me take some notes!</p>
             <p class="review-card__author">Scott Adams</p>
           </article>
           <article class="review-card">
-            <div class="review-card__rating" aria-label="5 star rating">
+            <div class="review-card__rating" >
               <span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span><span class="star"></span>
             </div>
             <p class="review-card__text">I’ve upped my game considerably since I started listening</p>
@@ -184,7 +184,7 @@
     <footer class="footer">
       <div class="footer__brand">
         <div class="footer__logo">Castaway</div>
-        <div class="footer__socials" aria-label="Social links">
+        <div class="footer__socials">
           <a class="footer__social" href="#" aria-label="Follow on Instagram">
             <img src="./pictures/insta.png">
           </a>
@@ -197,13 +197,13 @@
         </div>
       </div>
       <div class="footer__links">
-        <div class="footer__menu" aria-label="Primary footer links">
+        <div class="footer__menu">
           <a class="footer__link" href="#">Home</a>
           <a class="footer__link" href="#">About</a>
           <a class="footer__link" href="#">Episodes</a>
           <a class="footer__link" href="#">Contact</a>
         </div>
-        <div class="footer__menu" aria-label="Secondary footer links">
+        <div class="footer__menu">
           <a class="footer__link" href="#">Style Guide</a>
           <a class="footer__link" href="#">Instructions</a>
           <a class="footer__link" href="#">Changelog</a>
@@ -212,20 +212,20 @@
           <a class="footer__link" href="#">Licenses</a>
         </div>
       </div>
-      <div class="footer__platforms" aria-label="Listen on">
-        <a class="footer__platform" href="#" aria-label="Listen on Spotify">
+      <div class="footer__platforms">
+        <a class="footer__platform" href="#">
           <img src="pictures/spotify.png" alt="">
         </a>
-        <a class="footer__platform" href="#" aria-label="Listen on Google Podcasts">
+        <a class="footer__platform" href="#">
           <img src="pictures/pod.png" alt="">
         </a>
-        <a class="footer__platform" href="#" aria-label="Listen on Soundcloud">
+        <a class="footer__platform" href="#">
           <img src="pictures/soundc.png" alt="">
         </a>
-        <a class="footer__platform" href="#" aria-label="Listen on Apple Podcasts">
+        <a class="footer__platform" href="#">
           <img src="pictures/mic.png" alt="">
         </a>
-        <a class="footer__platform" href="#" aria-label="Listen on RSS">
+        <a class="footer__platform" href="#">
           <img src="pictures/antenna.png" alt="">
         </a>
       </div>
